--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <script src="./js/homework.js" defer></script>
     <script src="./js/blok-6.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <p class="output">Selected color: -</p>
+    <div class="color-palette"></div>
+  </body>
 </html>
