--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="./js/homework.js" defer></script>
-    <script src="./js/blok-6.js" defer></script>
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Task</title>
   </head>
   <body>
-    <p class="output">Selected color: -</p>
-    <div class="color-palette"></div>
+    <div class="timer">
+      <p class="clock-face"></p>
+
+      <div class="actions">
+        <button class="timer=btn" data-action-start>Start</button>
+        <button class="timer=btn" data-action-stop>Stop</button>
+      </div>
+    </div>
+
+    <script src="./js/homework.js"></script>
+    <script src="./js/blok-6.js"></script>
+    <script src="./js/block-10.js"></script>
   </body>
 </html>
