--- a/index.html
+++ b/index.html
@@ -7,17 +7,26 @@
     <title>Task</title>
   </head>
   <body>
-    <div class="timer">
+    <!-- <div class="timer">
       <p class="clock-face"></p>
 
       <div class="actions">
         <button class="timer=btn" data-action-start>Start</button>
         <button class="timer=btn" data-action-stop>Stop</button>
       </div>
+    </div> -->
+
+    <button class="start-btn">Start game</button>
+    <div class="container">
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
     </div>
+    <p class="result"></p>
 
     <script src="./js/homework.js"></script>
     <script src="./js/blok-6.js"></script>
     <script src="./js/block-10.js"></script>
+    <script src="./js/block-10.1.js"></script>
   </body>
 </html>
