--- a/index.html
+++ b/index.html
@@ -16,17 +16,48 @@
       </div>
     </div> -->
 
-    <button class="start-btn">Start game</button>
+    <!-- <button class="start-btn">Start game</button>
     <div class="container">
       <div class="item"></div>
       <div class="item"></div>
       <div class="item"></div>
-    </div>
-    <p class="result"></p>
+    </div> -->
+    <!-- <p class="result"></p> -->
+
+    <!-- <ul class="todo-list"></ul> -->
+
+    <!-- <ul class="list"></ul> -->
+
+    <form action="submit" class="js-search-form search-form">
+      <div class="form-group">
+        <label for="city" class="label">Введіть назву міста:</label>
+        <input
+          type="text"
+          name="city"
+          class="search-input"
+          autocomplete="off"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <label for="days" class="label">Виберіть кількість днів:</label>
+        <div class="input-group">
+          <select name="days" class="days-select">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+          </select>
+          <button class="search-button">Пошук</button>
+        </div>
+      </div>
+    </form>
+
+    <ul class="js-list weather-card"></ul>
 
     <script src="./js/homework.js"></script>
     <script src="./js/blok-6.js"></script>
     <script src="./js/block-10.js"></script>
     <script src="./js/block-10.1.js"></script>
+    <script src="./js/block-11.1.js"></script>
   </body>
 </html>
